--- a/index.html
+++ b/index.html
@@ -1,1 +1,34 @@
-"Twas brillig" 
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<script type="text/javascript">
+  "use strict";
+window.onload = function() {
+alert("hi");
+}
+</script>
+<style type="text/css">       
+*         { margin:0; padding:0; }
+body      { font-family:sans-serif; font-size:16px; background:#eee; outline:0px dotted red}
+body      { width:982px; padding:4px; overflow:scroll; }
+hr        { margin:4px; }
+p         { margin:0px 0px 8px 0px; }
+#div0     { padding:4px; min-height:900px; background:#ff8; outline:0px dotted green}
+.center   { text-align:center; }
+.bold     { font-weight:bold; }
+.font20   { font-size:20px; }
+.indent1  { text-indent: 16px; }
+.indent2  { text-indent: 32px; }
+.nospap   { margin:0; }
+.columns2 { column-count:2; -moz-column-count:2; -webkit-column-count:2; }
+</style>
+</head>
+<body><div id="div0">
+<h1 class="center">dcromley</h1>
+<p>
+Twas brillig, and the slythe toves,
+Did gyre and gymbal in the wabe.
+</p>
+</div></body>
+</html>
